--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-name",
+  "name": "pocket_bartender",
   "version": "1.0.0",
   "repository": {
     "url": "git+https://github.com/ChrisRDavila/{REPONAME}.git"
